samples/_failures_safe/1761152079_c29dbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7e42136.c: In function ‘parser_advance’:
./samples/SAFE/__tmp_d7e42136.c:167:5: error: expected expression at end of input
  167 |     parser->current_token = lexer_next_token(
      |     ^~~~~~
./samples/SAFE/__tmp_d7e42136.c:167:5: error: expected declaration or statement at end of input
